conformance/tests/httproute-request-redirect.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: request-redirect
  namespace: gateway-conformance-infra
spec:
  parentRefs:
  - name: same-namespace
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /hostname
    filters:
    - type: RequestRedirect
      requestRedirect:
        hostname: example.org
    backendRefs:
    - name: infra-backend-v1
      port: 8080
  - matches:
    - path:
        type: PathPrefix
        value: /status-code-301
    filters:
    - type: RequestRedirect
      requestRedirect:
        statusCode: 301
  - matches:
    - path:
        type: PathPrefix
        value: /host-and-status
    filters:
    - type: RequestRedirect
      requestRedirect:
        statusCode: 301
        hostname: example.org
    backendRefs:
    - name: infra-backend-v1
      port: 8080
